[package]
name = "shadow-harvester" # 🚨 NEW: The project and library name
version = "0.1.0"
edition = "2024"
license = "MIT Or Apache-2.0"
repository = "https://github.com/input-output-hk/ce-ashmaize"

# --- LIBRARY TARGET CONFIGURATION ---
[lib]
# The name of the library artifact produced (the .rlib file)
name = "shadow_harvester_lib"
# The path to your library code
path = "src/lib.rs"

# --- BINARY TARGET CONFIGURATION ---
[[bin]]
# Sets the executable name (what the user runs)
name = "shadow-harvester"
# Points to the main function for the executable
path = "src/main.rs"
bench = false
harness = false

[dependencies]
cryptoxide = "~0.5.1"
fmt = "0.1.0"
getrandom = "0.3"
hex = "0.4"
hex-literal = "1.0.0"
indicatif = "0.17"
# FIX: Ensure all required features are enabled:
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] } # FIX: 'blocking' feature is required for reqwest::blocking::Client
serde = { version = "1.0", features = ["derive"] } # FIX: 'derive' feature is required for #[derive(Deserialize)]
serde_json = "1.0" # Added for completeness, often required with serde
pallas-addresses = "0.33"
pallas-crypto = "0.33"
rand_core = { version = "0.6", features = ["std"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
randomx-rs = "1.3"
hex = "0.4"
indicatif = "0.17"
getrandom = "0.3"
